[tool.poetry]
name = "poetry_demo"
version = "0.1.0"
description = "A brief description of your project"
authors = []

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
format = 'scripts:format'
lint = 'scripts:lint'
